# ocr-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  deps.py
app/api/endpoints/: __init__.py  api.py
app/api/endpoints/v1/: __init__.py  docs.py
app/core/: __init__.py  broker.py  config.py  logging.py  storage.py
app/db/: session.py
app/models/: models.py
app/services/: worker.py
