[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr==1.7.2",
    "fastapi==0.124.4",
    "numpy==2.2.6",
    "opencv-python-headless==4.12.0.88",
    "paddleocr==3.3.2",
    "paddlepaddle==3.2.2",
    "pymupdf==1.26.7",
    "python-multipart==0.0.20",
    "uvicorn==0.38.0",
]
