[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.6.1",
    "aioodbc>=0.5.0",
    "azure-storage-blob>=12.28.0",
    "easyocr==1.7.2",
    "fastapi==0.124.4",
    "numpy==2.2.6",
    "opencv-python-headless==4.12.0.88",
    "paddleocr==3.3.2",
    "paddlepaddle==3.2.2",
    "pydantic-settings>=2.12.0",
    "pymupdf==1.26.7",
    "pyodbc>=5.3.0",
    "python-multipart==0.0.20",
    "sqlalchemy>=2.0.45",
    "uvicorn==0.38.0",
]
